# grainlify

backend/cmd/api/: main.go
backend/internal/api/: api.go
backend/internal/github/: api.go
backend/internal/handlers/: auth.go  github_app.go  github_oauth.go  leaderboard.go  projects.go  user_profile.go
backend/migrations/: 000016_add_avatar_url_to_github_accounts.down.sql  000016_add_avatar_url_to_github_accounts.up.sql
contracts/bounty_escrow/contracts/escrow/src/: events.rs  lib.rs  multitoken_invariants.rs  test_e2e_upgrade_with_pause.rs  test_expiration_and_dispute.rs
contracts/grainlify-core/: Cargo.toml
contracts/grainlify-core/src/: governance.rs  lib.rs
contracts/program-escrow/src/: lib.rs  rbac_tests.rs  test.rs  test_pause.rs
contracts/program-escrow/test_snapshots/test_lifecycle/: test_paused_toggle_flags_independently.1.json
contracts/program-escrow/test_snapshots/test_pause/: test_mixed_pause_states.1.json  test_set_paused_emits_events.1.json  test_set_paused_lock.1.json  test_set_paused_release.1.json  test_unset_paused_lock.1.json
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/app/: App.tsx
frontend/src/features/admin/pages/: AdminPage.tsx
frontend/src/features/auth/pages/: AuthCallbackPage.tsx
frontend/src/features/dashboard/: Dashboard.tsx
frontend/src/features/dashboard/pages/: BrowsePage.tsx  DataPage.tsx  DiscoverPage.tsx  EcosystemDetailPage.tsx  EcosystemsPage.tsx  IssueDetailPage.tsx  ProfilePage.tsx
frontend/src/shared/api/: client.ts
frontend/src/shared/components/ui/: Modal.tsx
(+6 files in other folders)
