[package]
name = "grainlify-core"
version = "0.1.0"
edition = "2021"

[lib]
# rlib only: cdylib on Windows can hit "export ordinal too large" when used as dependency
crate-type = ["rlib"]

[features]
default = ["contract"]
contract = []

[dependencies]
soroban-sdk = "21.0.0"

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
